# mova-bridge

./: .gitignore  ADDING_CONTRACTS.md  DEPLOYING_SKILLS.md  LICENSE  README.md  gen_churn_test.py  gen_compliance_test.py  gen_contract_gen_test.py  gen_credit_test.py  gen_supply_chain_test.py  gen_test_docs.py  pyproject.toml  soul.md
docs/: openclaw-mova-0.1.0.tgz  openclaw-mova-0.3.0.tgz
openclaw-plugin/: openclaw-mova-0.1.0.tgz  openclaw-mova-0.2.0.tgz  openclaw-mova-0.3.0.tgz  openclaw-mova-0.4.0.tgz  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin/src/: client.ts  index.ts
release/clawhub/mova-aml-triage/: SKILL.md
release/clawhub/mova-churn-prediction/: SKILL.md
release/clawhub/mova-complaints-handler/: SKILL.md
release/clawhub/mova-compliance-audit/: SKILL.md
release/clawhub/mova-connector-setup/: SKILL.md
release/clawhub/mova-contract-generation/: SKILL.md
release/clawhub/mova-credit-scoring/: SKILL.md
release/clawhub/mova-crypto-review/: SKILL.md
release/clawhub/mova-invoice-ocr/: SKILL.md
release/clawhub/mova-po-approval/: SKILL.md
release/clawhub/mova-spec-authoring/: SKILL.md
release/clawhub/mova-supply-chain-risk/: SKILL.md
src/mova_bridge/: __init__.py  __main__.py  server.py
